--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 plugins {
-    id 'com.gradleup.shadow' version '8.3.3'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'java'
 }
+
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 group = 'dev.efnilite'
 version = '1.1.0'
@@ -16,19 +18,31 @@ repositories {
 
 configurations {
     serverTestImplementation
+    testJarImplementation {
+        extendsFrom testImplementation
+        canBeResolved = true
+    }
 }
 
 dependencies {
     implementation 'org.spigotmc:spigot-api:1.21.1-R0.1-SNAPSHOT'
     implementation 'org.jetbrains:annotations:24.1.0'
 
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+    testImplementation 'org.junit.platform:junit-platform-engine:1.10.0'
+    testImplementation 'org.junit.platform:junit-platform-launcher:1.2.0'
+
     implementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+    implementation 'org.junit.platform:junit-platform-engine:1.10.0'
+    implementation 'org.junit.platform:junit-platform-launcher:1.2.0'
+
     serverTestImplementation 'com.google.code.gson:gson:2.11.0'
 }
 
 tasks.register('testJar', ShadowJar) {
     archiveFileName = 'neoschematic-test.jar'
     from sourceSets.main.output, sourceSets.test.output
+    configurations = [project.configurations.testJarImplementation]
 }
 
 def testVersion = "1.18.2"
